[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/star.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/teleport.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, -2, 0, 0, 0, 0, 497, 1, 0, 0, 0, 0, 497, 697, 0, 0, 0, 0, -1, 695, 0, 0, 0, 0, -1, -2 )
}

[node name="Game" type="Node"]
script = ExtResource( 4 )
star_scene = ExtResource( 2 )
enemy_scene = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="Path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawn" type="PathFollow2D" parent="Path"]
position = Vector2( -1, -2 )
rotation = 0.00602403

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 250, 350 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 25, 26 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="star" parent="." instance=ExtResource( 2 )]
position = Vector2( 229, 259 )

[node name="Teleport" parent="." instance=ExtResource( 6 )]
position = Vector2( 414, 263 )

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="collect" from="star" to="." method="collect_star"]
[connection signal="teleport" from="Teleport" to="." method="_on_teleport"]
